--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">WeatherApp</string>
+  <string name="app_name">WeatherApp</string>
+  <string name="api_key">f308568837cd42d793d123416170610</string>
 </resources>
