--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
   <string name="app_name">WeatherApp</string>
+  // This api key is not valid, generate your own by logging in here.
+  // https://www.apixu.com/
   <string name="api_key">f308568837cd42d793d123416170610</string>
   <string name="error_msg">Oops..!! Something went wrong</string>
 </resources>
